# minimal_ork_app

./: README.md
src/: CMakeLists.txt  main.cpp
